<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name">Eden</string>
    <string name="eden">Eden</string>
    <string name="your_web_client_id">202382885503-b7f1hekb86dimm64itvt6ud466cggall.apps.googleusercontent.com</string>
    <string name="cerrarSesion">CerrarSesion</string>
    <string name="productos">Productos</string>
    <string name="titulo_productos">Productos</string>
    <string name="seguimiento">Seguimiento</string>
    <string name="efecto">Efecto: ""</string>
    <string name="sabor">Sabor: ""</string>
    <string name="thc">THC: ""</string>
    <string name="precio">Precio: ""</string>
    <string name="reintentar">Reintentar</string>
    <string name="google">Google</string>
    <string name="a_ocurrido_un_error">¡A ocurrido un error!</string>
    <string name="products">products</string>
    <string name="shopping_car">shopping_car</string>
    <string name="tracking">tracking</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="compras">Compras</string>
    <string name="registrate_con_google">Registrate con Google</string>
    <string name="bienvenidos_a_eden">Bienvenidos a Eden!</string>
    <string name="descripcion">Descripcion: ""</string>
    <string name="cantidad">Cantidad: ""</string>
    <string name="fuerte_con_notas_dulces_de_frutas_y_tonos">Fuerte, con notas dulces de frutas y tonos</string>
    <string name="descripcion_producto">La Blueberry es una híbrida 80% índica y 20% sativa cuyos orígenes se remontan a los años 70. En aquel entonces, los cultivadores experimentaban con cruces de variedades autóctonas tailandesas, colombianas y mexicanas, y uno de los resultados fue la Juicy Fruit. La cepa híbrida Juicy Fruit fue cruzada de nuevo con una variedad pura afgana por DJ Short, creando la primera Blueberry de la historia alrededor de 1979.</string>
    <string name="saborTexto">Dulce y afrutado</string>
    <string name="comprar">Comprar ahora</string>
    <string name="titulo_descripcion">Descripcion</string>
    <string name="blueberry">BlueBerry</string>
    <string-array name="cuanty_gr">
        <item>1g</item>
        <item>2g</item>
        <item>3g</item>
        <item>4g</item>
        <item>5g</item>
        <item>6g</item>
        <item>7g</item>
        <item>8g</item>
        <item>9g</item>
        <item>10g</item>
        <item>11g</item>
        <item>12g</item>
        <item>13g</item>
        <item>14g</item>
        <item>15g</item>
        <item>16g</item>
        <item>17g</item>
        <item>18g</item>
        <item>19g</item>
        <item>20g</item>
    </string-array>
</resources>