<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.MainActivity"
        tools:layout_editor_absoluteX="-102dp"
        tools:layout_editor_absoluteY="-16dp"
        tools:openDrawer="start">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragmentContainerView"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:defaultNavHost="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navGraph="@navigation/nav_graph" />

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/navigation_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/bottomOf_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/top_container"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:background="@color/colorPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/ic_icon"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:src="@mipmap/ic_icon_principal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/eden"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/ic_icon" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <Button
                    android:id="@+id/btn_products"
                    style="@style/ButtonNavigationStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/productos"
                    app:layout_constraintStart_toEndOf="@+id/ic_products"
                    app:layout_constraintTop_toBottomOf="@+id/top_container" />

                <ImageView
                    android:id="@+id/ic_products"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fragment_horizontal_margin"
                    android:src="@mipmap/ic_products"
                    app:layout_constraintBottom_toTopOf="@+id/btn_tracking"
                    app:layout_constraintEnd_toStartOf="@+id/btn_products"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/top_container" />

                <Button
                    android:id="@+id/btn_tracking"
                    style="@style/ButtonNavigationStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seguimiento"
                    app:layout_constraintStart_toEndOf="@id/ic_tracking"
                    app:layout_constraintTop_toBottomOf="@+id/btn_products" />

                <ImageView
                    android:id="@+id/ic_tracking"
                    android:src="@mipmap/ic_tracking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fragment_horizontal_margin"

                    app:layout_constraintBottom_toTopOf="@id/btn_shopping"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btn_tracking"
                    app:layout_constraintTop_toBottomOf="@+id/btn_products" />


                <Button
                    android:id="@+id/btn_shopping"
                    style="@style/ButtonNavigationStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/compras"
                    app:layout_constraintStart_toEndOf="@id/ic_shopping"
                    app:layout_constraintTop_toBottomOf="@+id/btn_tracking" />

                <ImageView
                    android:id="@+id/ic_shopping"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_shopping"
                    android:layout_margin="@dimen/fragment_horizontal_margin"
                    app:layout_constraintBottom_toBottomOf="@id/btn_shopping"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btn_shopping"
                    app:layout_constraintTop_toBottomOf="@+id/btn_tracking" />


                <Button
                    android:id="@+id/btn_signOut"
                    style="@style/ButtonSignOutStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cerrarSesion"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ic_signout" />

                <ImageView
                    android:id="@+id/ic_signout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fragment_horizontal_margin"
                    android:src="@mipmap/ic_signout"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btn_signOut"
                    app:layout_constraintTop_toTopOf="@id/btn_signOut"
                    app:tint="@color/red" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.navigation.NavigationView>

    </androidx.drawerlayout.widget.DrawerLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

